# less-data

./: .gitignore  README.md  pyproject.toml
docs/: benchmark-protocol.md  data-schema.md  experiment-plan.md  figures.md  research-design.md  statistics.md  what-you-need-to-do.md
paper/: outline.md
scripts/: aggregate_results.py  plot_results.py  run_fashion_mnist.py
src/datavaluerank/: __init__.py  benchmark.py  cli.py  datasets.py  experiment.py  models.py  reporting.py  scoring.py  training.py  utils.py
